<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp">

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_weight="4"
        android:paddingRight="5dp"/>

    <TextView
        android:text="@string/ratio"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/ratio"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:paddingRight="5dp"/>

    <TextView
        android:text="@string/approval_total"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/approvalTotal"
        android:gravity="center_vertical"
        android:layout_weight="1" />
</LinearLayout>